--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -90,16 +90,24 @@ jobs:
       destinationFolder: $(Build.BinariesDirectory)/java
       cleanDestinationFolder: true
 
-  - task: Gradle@2
-    displayName: ./gradlew assemble
+  # - task: Gradle@2
+  #   displayName: ./gradlew assemble
+  #   inputs:
+  #     gradleWrapperFile: ./$(gradleWrapper)
+  #     options: "-POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId)"
+  #     tasks: 'assemble'
+  #     publishJUnitResults: false
+  #     javaHomeOption: 'Path'
+  #     jdkDirectory: $(javaHome)
+  #     sonarQubeRunAnalysis: false
+
+  - task: Bash@3
+    displayName: Assemble
     inputs:
-      gradleWrapperFile: ./$(gradleWrapper)
-      options: "-POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId)"
-      tasks: 'assemble'
-      publishJUnitResults: false
-      javaHomeOption: 'Path'
-      jdkDirectory: $(javaHome)
-      sonarQubeRunAnalysis: false
+      targetType: 'inline'
+      script: |
+        export JAVA_HOME=$(javaHome)
+        ./$(gradleWrapper) -POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId) assemble
 
   - task: CopyFiles@2
     inputs:
