--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,9 +56,11 @@ jobs:
         
         p2=`standardize_path '$(GetPython2.pythonLocation)/python'`
         p3=`standardize_path '$(GetPython3.pythonLocation)/python'`
-        echo "Python2 (${p2}) and Python3 (${p3})"
+        JAVA_HOME=`standardize_path '$(javaHome)'`
+        echo "Python2 -> ${p2}\nPython3 -> ${p3})\nJAVA_HOME -> ${JAVA_HOME}"
         
         echo "##vso[task.setvariable variable=python2]${p2}"
+        echo "##vso[task.setvariable variable=python3]${p3}"
         echo "##vso[task.setvariable variable=python3]${p3}"
 
   - task: CmdLine@2
@@ -90,23 +92,12 @@ jobs:
       destinationFolder: $(Build.BinariesDirectory)/java
       cleanDestinationFolder: true
 
-  # - task: Gradle@2
-  #   displayName: ./gradlew assemble
-  #   inputs:
-  #     gradleWrapperFile: ./$(gradleWrapper)
-  #     options: "-POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId)"
-  #     tasks: 'assemble'
-  #     publishJUnitResults: false
-  #     javaHomeOption: 'Path'
-  #     jdkDirectory: $(javaHome)
-  #     sonarQubeRunAnalysis: false
-
   - task: Bash@3
     displayName: Assemble
     inputs:
       targetType: 'inline'
       script: |
-        export JAVA_HOME=$(javaHome)
+        export JAVA_HOME=$(JAVA_HOME)
         ./$(gradleWrapper) -POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId) assemble
 
   - task: CopyFiles@2
