--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -100,6 +100,9 @@ jobs:
         export JAVA_HOME=$(JAVA_HOME)
         echo "Python3: $(python3)"
         echo "Python2: $(python2)"
+        $(python3) --version
+        $(python2) --version
+        
         ./$(gradleWrapper) -POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId) tasks
 
 #   - task: CopyFiles@2
