Add azure-pipline and gradle application support
This commit adds azure-pipeline integration so that changes to the
develop branch cause pre-release artifacts to be sent to GH.

Added the application plugin to build.gradle too

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.github.johnrengelman.shadow' version '5.1.0'
     id 'java'
     id 'org.openjfx.javafxplugin' version '0.0.7'
+    id 'application'
 }
 
 group 'edu.duke.cs'
@@ -67,6 +68,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+application {
+	mainClassName = 'edu.duke.cs.osprey.design.Main'
 }
 
 task compileGpu(type:Exec) {
