--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,119 +1,38 @@
 trigger:
-- master
+- develop
 
 jobs:
 - job: Assemble
-  timeoutInMinutes: 10
-  variables:
-    pythonDependencies: "sphinx==1.8 guzzle_sphinx_theme javalang"
-  strategy:
-    matrix:
-      Linux:
-        imageName: ubuntu-latest
-        openJdkUrl: https://download.java.net/java/GA/jdk14.0.1/664493ef4a6946b186ff29eb326336a2/7/GPL/
-        jdkName: openjdk-14.0.1_linux-x64_bin.tar.gz
-        javaHome: $(Build.BinariesDirectory)/java/jdk-14.0.1
-        gradleWrapper: gradlew
-      Mac:
-        imageName: macos-latest
-        openJdkUrl: https://download.java.net/java/GA/jdk14.0.1/664493ef4a6946b186ff29eb326336a2/7/GPL/
-        jdkName: openjdk-14.0.1_osx-x64_bin.tar.gz
-        javaHome: $(Build.BinariesDirectory)/java/jdk-14.0.1.jdk/Contents/Home/
-        gradleWrapper: gradlew
-      Windows:
-        imageName: windows-latest
-        openJdkUrl: https://download.java.net/java/GA/jdk14.0.1/664493ef4a6946b186ff29eb326336a2/7/GPL/
-        jdkName: openjdk-14.0.1_windows-x64_bin.zip
-        javaHome: $(Build.BinariesDirectory)/java/jdk-14.0.1
-        gradleWrapper: gradlew.bat
-
   pool:
-    vmImage: $(imageName)
+    vmImage: 'ubuntu-20.04'
 
   steps:
-  - task: UsePythonVersion@0
-    name: GetPython3
-    inputs:
-      versionSpec: '3.x'
-      addToPath: true
-      architecture: 'x64'
+  - checkout: self
+    lfs: true
+    displayName: "Init the repository with LFS"
 
-  - task: UsePythonVersion@0
-    name: GetPython2
+  - task: Gradle@2
     inputs:
-      versionSpec: '2.x'
-      addToPath: false
-      architecture: 'x64'
-
-  - task: Bash@3
-    displayName: Standardize Java and Python Paths
-    inputs:
-      targetType: 'inline'
-      script: |
-        function standardize_path {
-            echo `echo "$1" | tr '\\' '/'`
-        }
-        
-        p2=`standardize_path '$(GetPython2.pythonLocation)/python'`
-        p3=`standardize_path '$(GetPython3.pythonLocation)/python'`
-        JAVA_HOME=`standardize_path '$(javaHome)'`
-        echo "Python2 -> ${p2}"
-        echo "Python3 -> ${p3})"
-        echo "JAVA_HOME -> ${JAVA_HOME}"
-        
-        echo "##vso[task.setvariable variable=python2]${p2}"
-        echo "##vso[task.setvariable variable=python3]${p3}"
-        echo "##vso[task.setvariable variable=JAVA_HOME]${JAVA_HOME}"
-
-  - task: CmdLine@2
-    displayName: Install Python Dependencies
-    inputs:
-      script: |
-        echo "Installing Python 3 dependencies"
-        $(python3) -m pip install setuptools wheel
-        $(python3) -m pip install $(pythonDependencies)
-
-        echo "Installing Python 2 dependencies"
-        $(python2) -m pip install setuptools wheel
-        $(python2) -m pip install $(pythonDependencies)
-
-  # Download the JDK
-  - task: Bash@3
-    inputs:
-      targetType: 'inline'
-      script: 'curl --silent --remote-name $(openJdkUrl)$(jdkName)'
-      workingDirectory: '$(Build.BinariesDirectory)'
-    displayName: Download OpenJDK
-
-  - task: ExtractFiles@1
-    displayName: Extract OpenJDK
-    inputs:
-      archiveFilePatterns: |
-        $(Build.BinariesDirectory)/*.zip
-        $(Build.BinariesDirectory)/*.tar.gz
-      destinationFolder: $(Build.BinariesDirectory)/java
-      cleanDestinationFolder: true
-
-  - task: Bash@3
-    displayName: Assemble
-    inputs:
-      targetType: 'inline'
-      script: |
-        export JAVA_HOME=$(JAVA_HOME)
-        ./$(gradleWrapper) -POSPREY_PYTHON3=$(python3) -POSPREY_PYTHON2=$(python2) -PAZURE_BUILD_ID=$(Build.BuildId) assemble
+      gradleWrapperFile: 'gradlew'
+      tasks: 'shadowDistTar'
+      publishJUnitResults: false
+      javaHomeOption: 'JDKVersion'
+      jdkVersionOption: '1.11'
+      gradleOptions: '-Xmx3096m'
+      sonarQubeRunAnalysis: false
 
   - task: CopyFiles@2
     inputs:
-      SourceFolder: 'build/distributions'
+      SourceFolder: 'build/distributions/'
       Contents: |
-        *.zip
+        *.tar
       TargetFolder: '$(Build.ArtifactStagingDirectory)'
     displayName: Copy distributions to staging dir
 
   - task: PublishBuildArtifacts@1
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
-      ArtifactName: $(Agent.OS)
+      ArtifactName: Runnable app
       publishLocation: 'Container'
     displayName: Make staging dir an artifact
 
@@ -124,7 +43,7 @@ jobs:
   condition: ne(variables['Build.Reason'], 'PullRequest')
   steps:
   - bash: |
-      version=$(<resources/config/version)
+      version=$(<src/main/resources/config/version)
       echo "##vso[task.setvariable variable=version]${version}"
     displayName: Set version variable from version file
   - task: DownloadBuildArtifacts@0
@@ -141,7 +60,7 @@ jobs:
       target: '$(Build.SourceVersion)'
       tagSource: 'userSpecifiedTag'
       tag: '$(version).$(Build.BuildId)'
-      assets: '$(System.ArtifactsDirectory)/**/osprey-*python*.zip'
+      assets: '$(System.ArtifactsDirectory)/**/*.tar'
       isDraft: true
       changeLogCompareToRelease: 'lastFullRelease'
       changeLogType: 'commitBased'
