fix .gitignore file to stop filtering out amber binaries

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 
 # temp folders
-build
+/build
 **/*.egg-info
 **/*.pyc
 
 # netbeans things
-nbproject
+/nbproject
 build.xml
 nbbuild.xml
 
 # eclipse things
-bin
+/bin
 .classpath
 .project
 .settings
