--- a/.build.yml
+++ b/.build.yml
@@ -3,7 +3,7 @@ image: fedora/latest
 environment:
     LC_ALL: en_US.utf8
 packages:
-  - java-latest-openjdk
+  - java-latest-openjdk-devel
   - git-lfs
 sources:
   - https://git.sr.ht/~nsg/osprey
