WIP: new python API doc generator
still needs a lot of work, like crosslinking, but the basics are there now

--- a/doc/config.toml
+++ b/doc/config.toml
@@ -18,6 +18,7 @@ home = [ "HTML", "RSS", "JSON" ]
 # "learn" theme settings
 # https://learn.netlify.app/en/basics/configuration/#global-site-parameters
 disableInlineCopyToClipBoard = true
+disableMermaid = true
 
 # "learn" theme styles
 # https://learn.netlify.app/en/basics/style-customization/
