--- a/doc/config.toml
+++ b/doc/config.toml
@@ -35,7 +35,19 @@ path = "local.tld/hugo-theme-learn"
 
 # import the auto-generated API docs
 [[module.imports]]
-path = "local.tld/api-main"
+path = "local.tld/code-python"
 [[module.imports.mounts]]
 source = "content"
-target = "content/documentation/main/api"
+target = "content/documentation/main/code/python"
+
+[[module.imports]]
+path = "local.tld/code-java"
+[[module.imports.mounts]]
+source = "content"
+target = "content/documentation/main/code/java"
+
+[[module.imports]]
+path = "local.tld/code-kotlin"
+[[module.imports.mounts]]
+source = "content"
+target = "content/documentation/main/code/kotlin"
