link to docs for java/kotlin runtimes where appropriate, and fix minor issues with docs

--- a/doc/pydoc-markdown.yml
+++ b/doc/pydoc-markdown.yml
@@ -8,6 +8,7 @@ processors:
   - type: filter
   - type: osprey_pydoc.OspreyProcessor
   - type: pydocmd
+  - type: osprey_pydoc.OspreyUrl
   - type: crossref
 
 renderer:
