get hugo dev server working again, add landing page link to logo

--- a/doc/config.toml
+++ b/doc/config.toml
@@ -2,7 +2,8 @@
 # basic hugo config
 #baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "OSPREY"
+theme = "hugo-theme-learn"
 
 
 [outputs]
