improve build-time ssh capabilities to include running remote commands, and make a task to deploy the website to the dlab website

--- a/doc/config.toml
+++ b/doc/config.toml
@@ -1,6 +1,6 @@
 
 # basic hugo config
-#baseURL = "http://example.org/"
+baseURL = "https://www2.cs.duke.edu/donaldlab/software/osprey/docs/"
 languageCode = "en-us"
 title = "OSPREY"
 theme = "hugo-theme-learn"
