skip buildSrc tests when doing release builds in Azure pipelines

--- a/release-pipelines.yml
+++ b/release-pipelines.yml
@@ -72,6 +72,7 @@ jobs:
         inputs:
           gradleWrapperFile: $(gradleWrapper)
           options: '-PAZURE_BUILD_ID=$(Build.BuildId)'
+          gradleOptions: '-Dosprey.buildSrc.skipTests=true'
           tasks: 'desktopRelease serverRelease'
 
       - task: Gradle@3
