--- a/src/main/julia/.gitignore
+++ b/src/main/julia/.gitignore
@@ -21,4 +21,5 @@ docs/site/
 # It records a fixed state of all packages used by the project. As such, it should not be
 # committed for packages, but should be committed for applications that require a static
 # environment.
-Manifest.toml
+# Nate: We're an application that needs a static environment
+# Manifest.toml
