--- a/.build.yml
+++ b/.build.yml
@@ -2,15 +2,15 @@
 image: fedora/latest
 environment:
     LC_ALL: en_US.utf8
-packages:
-  - java-latest-openjdk-devel
-  - git-lfs
+      # packages:
+      #   - java-latest-openjdk-devel
+      #   - git-lfs
 sources:
   - https://git.sr.ht/~nsg/osprey
 tasks:
   - gradlew-assemble: |
       cd osprey
-      ./gradlew -b simple.build.gradle assembleDist
+      ./gradlew assembleDist
       ln build/distributions/osprey*.tar build/distributions/osprey-srht.tar
 artifacts:
     - osprey/build/distributions/osprey-srht.tar
