--- a/.build.yml
+++ b/.build.yml
@@ -2,9 +2,8 @@
 image: fedora/latest
 environment:
     LC_ALL: en_US.utf8
-      # packages:
-      #   - java-latest-openjdk-devel
-      #   - git-lfs
+packages:
+  - java-latest-openjdk-devel
 sources:
   - https://git.sr.ht/~nsg/osprey
 tasks:
