--- a/.build.yml
+++ b/.build.yml
@@ -2,11 +2,17 @@
 image: fedora/latest
 environment:
     LC_ALL: en_US.utf8
-packages:
-  - java-latest-openjdk-devel
+    JAVA_HOME: ~/software/jdk
+packages: []
 sources:
   - https://git.sr.ht/~nsg/osprey
 tasks:
+  - download-java: |
+      mkdir ~/software
+      cd ~/software
+      wget https://download.java.net/java/GA/jdk19.0.2/fdb695a9d9064ad6b064dc6df578380c/7/GPL/openjdk-19.0.2_linux-x64_bin.tar.gz
+      tar xf openjdk-19.0.2_linux-x64_bin.tar.gz
+      mv jdk-19.0.2 jdk
   - gradlew-assemble: |
       cd osprey
       ./gradlew assembleDist
