--- a/.build.yml
+++ b/.build.yml
@@ -3,16 +3,18 @@ image: fedora/latest
 environment:
     LC_ALL: en_US.utf8
     JAVA_HOME: ~/software/jdk
-packages: []
+packages:
+  - wget
 sources:
   - https://git.sr.ht/~nsg/osprey
 tasks:
   - download-java: |
+      URL=https://github.com/adoptium/temurin19-binaries/releases/download/jdk-19.0.2%2B7/OpenJDK19U-jdk_x64_linux_hotspot_19.0.2_7.tar.gz
       mkdir ~/software
       cd ~/software
-      wget https://download.java.net/java/GA/jdk19.0.2/fdb695a9d9064ad6b064dc6df578380c/7/GPL/openjdk-19.0.2_linux-x64_bin.tar.gz
-      tar xf openjdk-19.0.2_linux-x64_bin.tar.gz
-      mv jdk-19.0.2 jdk
+      wget $URL
+      tar xf OpenJDK19U-jdk_x64_linux_hotspot_19.0.2_7.tar.gz
+      mv jdk-19.0.2+7 jdk
   - gradlew-assemble: |
       cd osprey
       ./gradlew assembleDist
