--- a/.build.yml
+++ b/.build.yml
@@ -5,6 +5,7 @@ environment:
     JAVA_HOME: ~/software/jdk
 packages:
   - wget
+  - tar
 sources:
   - https://git.sr.ht/~nsg/osprey
 tasks:
@@ -12,7 +13,7 @@ tasks:
       URL=https://github.com/adoptium/temurin19-binaries/releases/download/jdk-19.0.2%2B7/OpenJDK19U-jdk_x64_linux_hotspot_19.0.2_7.tar.gz
       mkdir ~/software
       cd ~/software
-      wget $URL
+      wget --quiet $URL
       tar xf OpenJDK19U-jdk_x64_linux_hotspot_19.0.2_7.tar.gz
       mv jdk-19.0.2+7 jdk
   - gradlew-assemble: |
