Make website work with either server
Make links generated by Hugo relative to docs subtree, so website works from either donaldlab.cs.duke.edu or from www2.cs.duke.edu/donaldlab.

But this fix takes advantage of a post-processing substitution in Hugo (relativeURLs), which means that no static link should begin with "/donaldlab/".

--- a/doc/config.toml
+++ b/doc/config.toml
@@ -1,10 +1,9 @@
 
 # basic hugo config
-baseURL = "https://www2.cs.duke.edu/donaldlab/software/osprey/docs/"
 languageCode = "en-us"
 title = "OSPREY"
 theme = "hugo-theme-learn"
-
+relativeURLs = true
 
 [outputs]
 
